make title and clock responsive

--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
         <h1 class="title main-title">What time is it in your timeline?</h1>
     </header>
     
-    <main>
+    <main class="main-section">
         <div class="vertical-container clockbox">
             <img id="clock-body" src="img/miss-minutes.svg" alt="An animated clock character called Miss Minutes from Loki's TV show.">
             
@@ -34,7 +34,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="footer">
         <p></p>
     </footer>
 </body>
