javascript algorithm to update clock with current time

--- a/web/index.html
+++ b/web/index.html
@@ -21,15 +21,15 @@
             <svg  id="clock-arms" xmlns="http://www.w3.org/2000/svg" width="600" height="600"
             viewBox="0 0 600 600">
             <g id="hour">
-                <rect class="hour-arm" x="300" height="160" y="300" width="11"/>
+                <rect class="hour-arm" x="296" height="160" y="135" width="11"/>
             </g>
             <g id="minute">
-                <rect class="minute-arm" x="300" height="230" y="300" width="11"/>
+                <rect class="minute-arm" x="296" height="220" y="80" width="11"/>
             </g>
             <g id="second">
-                <rect class="second-arm" x="303" height="245" y="300" width="5"/>
+                <rect class="second-arm" x="298" height="280" y="60" width="5"/>
             </g>
-            <circle class="sizing-box" cx="305" cy="300" r="2.5%" style="fill: #879D68; stroke: #000; stroke-width: 2"/>
+            <circle class="sizing-box" cx="300" cy="300" r="2.5%" style="fill: #879D68; stroke: #000; stroke-width: 2"/>
         </svg>
         </div>
     </main>
@@ -38,4 +38,5 @@
         <p></p>
     </footer>
 </body>
+<script type="text/javascript" src="js/clock.js"></script>
 </html>
