add footer and make ajusts in the responsiveness

--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,11 @@
     </main>
 
     <footer class="footer">
-        <p></p>
+        <p>This HTML/CSS/Javascript clock was inspired by a <a href="https://www.linkedin.com/learning/javascript-formacao-basica" target="_blank">LinkedIn's course</a> taught by <a href="https://www.linkedin.com/in/amandacavallaro/" target="_blank">Amanda Cavallaro</a>.
+        <br>
+        Do you want know more about the developer and see more projects like this? 
+        <br>
+        Check my <a href="https://www.linkedin.com/in/gabrielbssantos/" target="_blank">LinkedIn</a> and <a href="https://github.com/gabrielbssantos" target="_blank">Github</a>. Thanks for your visit!</p>
     </footer>
 </body>
 <script type="text/javascript" src="js/clock.js"></script>
